# planetsharp

./: .gitignore  DECISIONS.md  IMPLEMENTATION_REQUIREMENTS.md  README.md  REQUIREMENTS_TRACEABILITY.md  main.py  pyproject.toml
docs/: performance_analysis.md
planetsharp/: app.py  blocks.py  io_utils.py  perf.py  widgets.py
scripts/: profile_pipeline.py
spec/: design.md
src/planetsharp/: __init__.py  __main__.py
src/planetsharp/core/: models.py  presets.py
src/planetsharp/io/: formats.py
src/planetsharp/persistence/: session_store.py  template_store.py
src/planetsharp/processing/: blocks.py  engine.py
src/planetsharp/render/: scheduler.py
src/planetsharp/tests/: test_session.py
src/planetsharp/ui/: app.py
